[gd_scene load_steps=6 format=2]

[ext_resource path="res://levels/basic_level.gd" type="Script" id=1]
[ext_resource path="res://levels/objectives.gd" type="Script" id=2]
[ext_resource path="res://screens/game_screen/game_screen.tscn" type="PackedScene" id=3]

[sub_resource type="LineShape2D" id=1]

custom_solver_bias = 0.0
normal = Vector2( 1, 0 )
d = 0.0

[sub_resource type="LineShape2D" id=2]

custom_solver_bias = 0.0
normal = Vector2( -1, 0 )
d = 0.0

[node name="BasicLevel" type="Node2D"]

script = ExtResource( 1 )

[node name="Tilemap" type="Node2D" parent="." index="0"]

[node name="TileMap" type="TileMap" parent="Tilemap" index="0"]

mode = 0
tile_set = null
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )

[node name="Objectives" type="Node2D" parent="." index="1"]

script = ExtResource( 2 )
count_time = false

[node name="Enviroment" type="Node2D" parent="." index="2"]

[node name="Portal" type="Area2D" parent="." index="3"]

input_pickable = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="Shape" type="CollisionShape2D" parent="Portal" index="0"]

[node name="Camera2D" type="Camera2D" parent="." index="4"]

position = Vector2( 640, 360 )
offset = Vector2( 0, -128 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.23
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
editor_draw_screen = true
editor_draw_limits = true
editor_draw_drag_margin = true
_sections_unfolded = [ "Drag Margin", "Editor", "Smoothing", "Transform" ]

[node name="Screen" type="CanvasLayer" parent="." index="5"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="GameScreen" parent="Screen" index="0" instance=ExtResource( 3 )]

[node name="Boundaries" type="StaticBody2D" parent="." index="6"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Left" type="CollisionShape2D" parent="Boundaries" index="0"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Right" type="CollisionShape2D" parent="Boundaries" index="1"]

shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Void" type="Area2D" parent="." index="7"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="Shape" type="CollisionShape2D" parent="Void" index="0"]

[connection signal="transition_finished" from="Screen/GameScreen" to="Camera2D" method="_set_current" binds= [ true ]]

[connection signal="body_entered" from="Void" to="." method="_on_void_entered"]


